moved css and assets for homepage into own directory

--- a/home/style.css
+++ b/home/style.css
@@ -1,5 +1,5 @@
 body {
-    background: #000 url(http://tiledwallpaper.com/wallpapers/2010/9/8691566384c888e0789e396.91992381.jpg);
+    background: #000 url(bowie_tiled_bg.jpg);
 }
 
 .navbar{
